# plex-status

./: .gitignore  Cargo.toml  Dockerfile  index.html  package-lock.json  package.json
.github/workflows/: docker-publish.yml
src/: fallback.rs  lib.rs  main.rs
src/components/: current_viewers.rs  link.rs  mod.rs  status_box.rs
